message(STATUS "Generating build files for 521.wrf_r...")

set(SRC_FILE_521
    build/build_base_mytest-m64.0000/alloc_2d.c
    build/build_base_mytest-m64.0000/apply_bitmap.c
    build/build_base_mytest-m64.0000/bobrand.c
    build/build_base_mytest-m64.0000/c_code.c
    build/build_base_mytest-m64.0000/collect_on_comm.c
    build/build_base_mytest-m64.0000/data.c
    build/build_base_mytest-m64.0000/flt2ieee.c
    build/build_base_mytest-m64.0000/gbyte.c
    build/build_base_mytest-m64.0000/get_region_center.c
    build/build_base_mytest-m64.0000/grib1_routines.c
    build/build_base_mytest-m64.0000/grib_dec.c
    build/build_base_mytest-m64.0000/grib_enc.c
    build/build_base_mytest-m64.0000/grib_seek.c
    build/build_base_mytest-m64.0000/grib_uthin.c
    build/build_base_mytest-m64.0000/gribgetbds.c
    build/build_base_mytest-m64.0000/gribgetbms.c
    build/build_base_mytest-m64.0000/gribgetgds.c
    build/build_base_mytest-m64.0000/gribgetpds.c
    build/build_base_mytest-m64.0000/gribhdr2file.c
    build/build_base_mytest-m64.0000/gribmap.c
    build/build_base_mytest-m64.0000/gribputbds.c
    build/build_base_mytest-m64.0000/gribputgds.c
    build/build_base_mytest-m64.0000/gribputpds.c
    build/build_base_mytest-m64.0000/gridnav.c
    build/build_base_mytest-m64.0000/hires_timer.c
    build/build_base_mytest-m64.0000/init_dec_struct.c
    build/build_base_mytest-m64.0000/init_gribhdr.c
    build/build_base_mytest-m64.0000/io_int_idx.c
    build/build_base_mytest-m64.0000/landread.c
    build/build_base_mytest-m64.0000/ld_dec_lookup.c
    build/build_base_mytest-m64.0000/ld_grib_origctrs.c
    build/build_base_mytest-m64.0000/misc.c
    build/build_base_mytest-m64.0000/my_strtok.c
    build/build_base_mytest-m64.0000/netcdf/attr.c
    build/build_base_mytest-m64.0000/netcdf/dim.c
    build/build_base_mytest-m64.0000/netcdf/error.c
    build/build_base_mytest-m64.0000/netcdf/fort-attio.c
    build/build_base_mytest-m64.0000/netcdf/fort-control.c
    build/build_base_mytest-m64.0000/netcdf/fort-dim.c
    build/build_base_mytest-m64.0000/netcdf/fort-genatt.c
    build/build_base_mytest-m64.0000/netcdf/fort-geninq.c
    build/build_base_mytest-m64.0000/netcdf/fort-genvar.c
    build/build_base_mytest-m64.0000/netcdf/fort-lib.c
    build/build_base_mytest-m64.0000/netcdf/fort-misc.c
    build/build_base_mytest-m64.0000/netcdf/fort-varaio.c
    build/build_base_mytest-m64.0000/netcdf/libvers.c
    build/build_base_mytest-m64.0000/netcdf/nc.c
    build/build_base_mytest-m64.0000/netcdf/ncio.c
    build/build_base_mytest-m64.0000/netcdf/ncx.c
    build/build_base_mytest-m64.0000/netcdf/putget.c
    build/build_base_mytest-m64.0000/netcdf/string.c
    build/build_base_mytest-m64.0000/netcdf/v1hpg.c
    build/build_base_mytest-m64.0000/netcdf/v2i.c
    build/build_base_mytest-m64.0000/netcdf/var.c
    build/build_base_mytest-m64.0000/pack_spatial.c
    build/build_base_mytest-m64.0000/pack_utils.c
    build/build_base_mytest-m64.0000/period.c
    build/build_base_mytest-m64.0000/read_grib.c
    build/build_base_mytest-m64.0000/reg_parse.c
    build/build_base_mytest-m64.0000/rsl_bcast.c
    build/build_base_mytest-m64.0000/set_bytes.c
    build/build_base_mytest-m64.0000/setfeenv.c
    build/build_base_mytest-m64.0000/symtab_gen.c
    build/build_base_mytest-m64.0000/task_for_point.c
    build/build_base_mytest-m64.0000/trim.c
    build/build_base_mytest-m64.0000/type.c
    build/build_base_mytest-m64.0000/upd_child_errmsg.c
    build/build_base_mytest-m64.0000/wrf_num_bytes_between.c
    build/build_base_mytest-m64.0000/ESMF_Alarm.fppized.f90
    build/build_base_mytest-m64.0000/ESMF_AlarmClock.fppized.f90
    build/build_base_mytest-m64.0000/ESMF_Base.fppized.f90
    build/build_base_mytest-m64.0000/ESMF_BaseTime.fppized.f90
    build/build_base_mytest-m64.0000/ESMF_Calendar.fppized.f90
    build/build_base_mytest-m64.0000/ESMF_Clock.fppized.f90
    build/build_base_mytest-m64.0000/ESMF_Fraction.fppized.f90
    build/build_base_mytest-m64.0000/ESMF_Mod.fppized.f90
    build/build_base_mytest-m64.0000/ESMF_Stubs.fppized.f90
    build/build_base_mytest-m64.0000/ESMF_Time.fppized.f90
    build/build_base_mytest-m64.0000/ESMF_TimeInterval.fppized.f90
    build/build_base_mytest-m64.0000/Meat.fppized.f90
    build/build_base_mytest-m64.0000/adapt_timestep_em.fppized.f90
    build/build_base_mytest-m64.0000/c1f2kb.fppized.f90
    build/build_base_mytest-m64.0000/c1f2kf.fppized.f90
    build/build_base_mytest-m64.0000/c1f3kb.fppized.f90
    build/build_base_mytest-m64.0000/c1f3kf.fppized.f90
    build/build_base_mytest-m64.0000/c1f4kb.fppized.f90
    build/build_base_mytest-m64.0000/c1f4kf.fppized.f90
    build/build_base_mytest-m64.0000/c1f5kb.fppized.f90
    build/build_base_mytest-m64.0000/c1f5kf.fppized.f90
    build/build_base_mytest-m64.0000/c1fgkb.fppized.f90
    build/build_base_mytest-m64.0000/c1fgkf.fppized.f90
    build/build_base_mytest-m64.0000/c1fm1b.fppized.f90
    build/build_base_mytest-m64.0000/c1fm1f.fppized.f90
    build/build_base_mytest-m64.0000/cfft1b.fppized.f90
    build/build_base_mytest-m64.0000/cfft1i.fppized.f90
    build/build_base_mytest-m64.0000/cfftmb.fppized.f90
    build/build_base_mytest-m64.0000/cfftmf.fppized.f90
    build/build_base_mytest-m64.0000/cfftmi.fppized.f90
    build/build_base_mytest-m64.0000/cmf2kb.fppized.f90
    build/build_base_mytest-m64.0000/cmf2kf.fppized.f90
    build/build_base_mytest-m64.0000/cmf3kb.fppized.f90
    build/build_base_mytest-m64.0000/cmf3kf.fppized.f90
    build/build_base_mytest-m64.0000/cmf4kb.fppized.f90
    build/build_base_mytest-m64.0000/cmf4kf.fppized.f90
    build/build_base_mytest-m64.0000/cmf5kb.fppized.f90
    build/build_base_mytest-m64.0000/cmf5kf.fppized.f90
    build/build_base_mytest-m64.0000/cmfgkb.fppized.f90
    build/build_base_mytest-m64.0000/cmfgkf.fppized.f90
    build/build_base_mytest-m64.0000/cmfm1b.fppized.f90
    build/build_base_mytest-m64.0000/cmfm1f.fppized.f90
    build/build_base_mytest-m64.0000/cosq1b.fppized.f90
    build/build_base_mytest-m64.0000/cosq1f.fppized.f90
    build/build_base_mytest-m64.0000/cosq1i.fppized.f90
    build/build_base_mytest-m64.0000/cosqb1.fppized.f90
    build/build_base_mytest-m64.0000/cosqf1.fppized.f90
    build/build_base_mytest-m64.0000/cosqmb.fppized.f90
    build/build_base_mytest-m64.0000/cosqmf.fppized.f90
    build/build_base_mytest-m64.0000/cosqmi.fppized.f90
    build/build_base_mytest-m64.0000/couple_or_uncouple_em.fppized.f90
    build/build_base_mytest-m64.0000/d1f2kb.fppized.f90
    build/build_base_mytest-m64.0000/d1f2kf.fppized.f90
    build/build_base_mytest-m64.0000/d1f3kb.fppized.f90
    build/build_base_mytest-m64.0000/d1f3kf.fppized.f90
    build/build_base_mytest-m64.0000/d1f4kb.fppized.f90
    build/build_base_mytest-m64.0000/d1f4kf.fppized.f90
    build/build_base_mytest-m64.0000/d1f5kb.fppized.f90
    build/build_base_mytest-m64.0000/d1f5kf.fppized.f90
    build/build_base_mytest-m64.0000/d1fgkb.fppized.f90
    build/build_base_mytest-m64.0000/d1fgkf.fppized.f90
    build/build_base_mytest-m64.0000/dfft1b.fppized.f90
    build/build_base_mytest-m64.0000/dfft1f.fppized.f90
    build/build_base_mytest-m64.0000/dfft1i.fppized.f90
    build/build_base_mytest-m64.0000/dfftb1.fppized.f90
    build/build_base_mytest-m64.0000/dfftf1.fppized.f90
    build/build_base_mytest-m64.0000/dffti1.fppized.f90
    build/build_base_mytest-m64.0000/dfi.fppized.f90
    build/build_base_mytest-m64.0000/field_routines.fppized.f90
    build/build_base_mytest-m64.0000/init_modules.fppized.f90
    build/build_base_mytest-m64.0000/init_modules_em.fppized.f90
    build/build_base_mytest-m64.0000/input_wrf.fppized.f90
    build/build_base_mytest-m64.0000/interp_fcn.fppized.f90
    build/build_base_mytest-m64.0000/io_int.fppized.f90
    build/build_base_mytest-m64.0000/libmassv.fppized.f90
    build/build_base_mytest-m64.0000/mcsqb1.fppized.f90
    build/build_base_mytest-m64.0000/mcsqf1.fppized.f90
    build/build_base_mytest-m64.0000/mediation_feedback_domain.fppized.f90
    build/build_base_mytest-m64.0000/mediation_force_domain.fppized.f90
    build/build_base_mytest-m64.0000/mediation_integrate.fppized.f90
    build/build_base_mytest-m64.0000/mediation_interp_domain.fppized.f90
    build/build_base_mytest-m64.0000/mediation_wrfmain.fppized.f90
    build/build_base_mytest-m64.0000/module_advect_em.fppized.f90
    build/build_base_mytest-m64.0000/module_after_all_rk_steps.fppized.f90
    build/build_base_mytest-m64.0000/module_alloc_space_0.fppized.f90
    build/build_base_mytest-m64.0000/module_alloc_space_1.fppized.f90
    build/build_base_mytest-m64.0000/module_alloc_space_2.fppized.f90
    build/build_base_mytest-m64.0000/module_alloc_space_3.fppized.f90
    build/build_base_mytest-m64.0000/module_alloc_space_4.fppized.f90
    build/build_base_mytest-m64.0000/module_alloc_space_5.fppized.f90
    build/build_base_mytest-m64.0000/module_alloc_space_6.fppized.f90
    build/build_base_mytest-m64.0000/module_alloc_space_7.fppized.f90
    build/build_base_mytest-m64.0000/module_alloc_space_8.fppized.f90
    build/build_base_mytest-m64.0000/module_alloc_space_9.fppized.f90
    build/build_base_mytest-m64.0000/module_avgflx_em.fppized.f90
    build/build_base_mytest-m64.0000/module_bc.fppized.f90
    build/build_base_mytest-m64.0000/module_bc_em.fppized.f90
    build/build_base_mytest-m64.0000/module_bc_time_utilities.fppized.f90
    build/build_base_mytest-m64.0000/module_big_step_utilities_em.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_acm.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_boulac.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_camuwpbl_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_fogdes.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_gbmpbl.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_gfs.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_gfs2011.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_gwdo.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_mfshconvpbl.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_mrf.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_myjpbl.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_myjurb.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_mynn.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_qnsepbl.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_qnsepbl09.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_temf.fppized.f90
    build/build_base_mytest-m64.0000/module_bl_ysu.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_bl_diffusion_solver.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_bl_eddy_diff.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_cldwat.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_constituents.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_error_function.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_esinti.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_gffgch.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_molec_diff.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_mp_cldwat2m_micro.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_mp_conv_water.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_mp_microp_aero.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_mp_modal_aero_initialize_data_phys.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_mp_ndrop.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_mp_qneg3.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_mp_radconstants.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_physconst.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_shr_const_mod.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_shr_kind_mod.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_support.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_trb_mtn_stress.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_upper_bc.fppized.f90
    build/build_base_mytest-m64.0000/module_cam_wv_saturation.fppized.f90
    build/build_base_mytest-m64.0000/module_check_a_mundo.fppized.f90
    build/build_base_mytest-m64.0000/module_comm_dm.fppized.f90
    build/build_base_mytest-m64.0000/module_comm_dm_0.fppized.f90
    build/build_base_mytest-m64.0000/module_comm_dm_1.fppized.f90
    build/build_base_mytest-m64.0000/module_comm_dm_2.fppized.f90
    build/build_base_mytest-m64.0000/module_comm_dm_3.fppized.f90
    build/build_base_mytest-m64.0000/module_comm_dm_4.fppized.f90
    build/build_base_mytest-m64.0000/module_comm_nesting_dm.fppized.f90
    build/build_base_mytest-m64.0000/module_configure.fppized.f90
    build/build_base_mytest-m64.0000/module_convtrans_prep.fppized.f90
    build/build_base_mytest-m64.0000/module_cpl.fppized.f90
    build/build_base_mytest-m64.0000/module_cpl_oasis3.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_bmj.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_camzm.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_camzm_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_g3.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_gd.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_gf.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_kf.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_kfeta.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_mesosas.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_nsas.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_osas.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_sas.fppized.f90
    build/build_base_mytest-m64.0000/module_cu_tiedtke.fppized.f90
    build/build_base_mytest-m64.0000/module_cumulus_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_damping_em.fppized.f90
    build/build_base_mytest-m64.0000/module_data_cam_mam_aero.fppized.f90
    build/build_base_mytest-m64.0000/module_data_cam_mam_asect.fppized.f90
    build/build_base_mytest-m64.0000/module_data_gocart_dust.fppized.f90
    build/build_base_mytest-m64.0000/module_date_time.fppized.f90
    build/build_base_mytest-m64.0000/module_diag_afwa.fppized.f90
    build/build_base_mytest-m64.0000/module_diag_afwa_hail.fppized.f90
    build/build_base_mytest-m64.0000/module_diag_cl.fppized.f90
    build/build_base_mytest-m64.0000/module_diag_misc.fppized.f90
    build/build_base_mytest-m64.0000/module_diag_pld.fppized.f90
    build/build_base_mytest-m64.0000/module_diagnostics_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_diffusion_em.fppized.f90
    build/build_base_mytest-m64.0000/module_dm.fppized.f90
    build/build_base_mytest-m64.0000/module_domain.fppized.f90
    build/build_base_mytest-m64.0000/module_domain_type.fppized.f90
    build/build_base_mytest-m64.0000/module_driver_constants.fppized.f90
    build/build_base_mytest-m64.0000/module_em.fppized.f90
    build/build_base_mytest-m64.0000/module_fdda_psufddagd.fppized.f90
    build/build_base_mytest-m64.0000/module_fdda_spnudging.fppized.f90
    build/build_base_mytest-m64.0000/module_fddagd_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_fddaobs_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_fddaobs_rtfdda.fppized.f90
    build/build_base_mytest-m64.0000/module_first_rk_step_part1.fppized.f90
    build/build_base_mytest-m64.0000/module_first_rk_step_part2.fppized.f90
    build/build_base_mytest-m64.0000/module_force_scm.fppized.f90
    build/build_base_mytest-m64.0000/module_fr_fire_atm.fppized.f90
    build/build_base_mytest-m64.0000/module_fr_fire_core.fppized.f90
    build/build_base_mytest-m64.0000/module_fr_fire_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_fr_fire_driver_wrf.fppized.f90
    build/build_base_mytest-m64.0000/module_fr_fire_model.fppized.f90
    build/build_base_mytest-m64.0000/module_fr_fire_phys.fppized.f90
    build/build_base_mytest-m64.0000/module_fr_fire_util.fppized.f90
    build/build_base_mytest-m64.0000/module_gfs_funcphys.fppized.f90
    build/build_base_mytest-m64.0000/module_gfs_machine.fppized.f90
    build/build_base_mytest-m64.0000/module_gfs_physcons.fppized.f90
    build/build_base_mytest-m64.0000/module_init_utilities.fppized.f90
    build/build_base_mytest-m64.0000/module_integrate.fppized.f90
    build/build_base_mytest-m64.0000/module_intermediate_nmm.fppized.f90
    build/build_base_mytest-m64.0000/module_internal_header_util.fppized.f90
    build/build_base_mytest-m64.0000/module_interp_store.fppized.f90
    build/build_base_mytest-m64.0000/module_io.fppized.f90
    build/build_base_mytest-m64.0000/module_io_domain.fppized.f90
    build/build_base_mytest-m64.0000/module_io_quilt.fppized.f90
    build/build_base_mytest-m64.0000/module_io_wrf.fppized.f90
    build/build_base_mytest-m64.0000/module_lightning_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_llxy.fppized.f90
    build/build_base_mytest-m64.0000/module_ltng_cpmpr92z.fppized.f90
    build/build_base_mytest-m64.0000/module_ltng_crmpr92.fppized.f90
    build/build_base_mytest-m64.0000/module_ltng_iccg.fppized.f90
    build/build_base_mytest-m64.0000/module_ltng_lpi.fppized.f90
    build/build_base_mytest-m64.0000/module_machine.fppized.f90
    build/build_base_mytest-m64.0000/module_microphysics_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_microphysics_zero_out.fppized.f90
    build/build_base_mytest-m64.0000/module_mixactivate.fppized.f90
    build/build_base_mytest-m64.0000/module_model_constants.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_HWRF.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_cammgmp_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_etanew.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_etaold.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_fast_sbm.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_full_sbm.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_gsfcgce.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_kessler.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_lin.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_milbrandt2mom.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_morr_two_moment.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_nssl_2mom.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_radar.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_sbu_ylin.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_thompson.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_wdm5.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_wdm6.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_wsm3.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_wsm5.fppized.f90
    build/build_base_mytest-m64.0000/module_mp_wsm6.fppized.f90
    build/build_base_mytest-m64.0000/module_nesting.fppized.f90
    build/build_base_mytest-m64.0000/module_optional_input.fppized.f90
    build/build_base_mytest-m64.0000/module_pbl_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_physics_addtendc.fppized.f90
    build/build_base_mytest-m64.0000/module_physics_init.fppized.f90
    build/build_base_mytest-m64.0000/module_polarfft.fppized.f90
    build/build_base_mytest-m64.0000/module_progtm.fppized.f90
    build/build_base_mytest-m64.0000/module_quilt_outbuf_ops.fppized.f90
    build/build_base_mytest-m64.0000/module_ra_HWRF.fppized.f90
    build/build_base_mytest-m64.0000/module_ra_aerosol.fppized.f90
    build/build_base_mytest-m64.0000/module_ra_cam.fppized.f90
    build/build_base_mytest-m64.0000/module_ra_cam_support.fppized.f90
    build/build_base_mytest-m64.0000/module_ra_clWRF_support.fppized.f90
    build/build_base_mytest-m64.0000/module_ra_flg.fppized.f90
    build/build_base_mytest-m64.0000/module_ra_gfdleta.fppized.f90
    build/build_base_mytest-m64.0000/module_ra_goddard.fppized.f90
    build/build_base_mytest-m64.0000/module_ra_gsfcsw.fppized.f90
    build/build_base_mytest-m64.0000/module_ra_hs.fppized.f90
    build/build_base_mytest-m64.0000/module_ra_rrtm.fppized.f90
    build/build_base_mytest-m64.0000/module_ra_sw.fppized.f90
    build/build_base_mytest-m64.0000/module_radiation_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_3dpwp.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_bem.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_bep.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_bep_bem.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_clm.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_fogdes.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_gfdl.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_gfs.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_idealscmsfclay.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_lake.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_myjsfc.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_mynn.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_noah_seaice.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_noah_seaice_drv.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_noahdrv.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_noahlsm.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_noahlsm_glacial_only.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_noahmp_glacier.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_noahmp_groundwater.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_noahmpdrv.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_noahmplsm.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_ocean_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_oml.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_pxlsm.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_pxlsm_data.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_pxsfclay.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_qnsesfc.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_ruclsm.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_scmflux.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_scmskintemp.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_sfcdiags.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_sfcdiags_ruclsm.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_sfclay.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_sfclayrev.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_slab.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_ssib.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_sstskin.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_temfsfclay.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_tmnupdate.fppized.f90
    build/build_base_mytest-m64.0000/module_sf_urban.fppized.f90
    build/build_base_mytest-m64.0000/module_shallowcu_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_shcu_camuwshcu.fppized.f90
    build/build_base_mytest-m64.0000/module_shcu_camuwshcu_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_shcu_grims.fppized.f90
    build/build_base_mytest-m64.0000/module_small_step_em.fppized.f90
    build/build_base_mytest-m64.0000/module_soil_pre.fppized.f90
    build/build_base_mytest-m64.0000/module_solvedebug_em.fppized.f90
    build/build_base_mytest-m64.0000/module_state_description.fppized.f90
    build/build_base_mytest-m64.0000/module_stoch.fppized.f90
    build/build_base_mytest-m64.0000/module_streams.fppized.f90
    build/build_base_mytest-m64.0000/module_surface_driver.fppized.f90
    build/build_base_mytest-m64.0000/module_symbols_util.fppized.f90
    build/build_base_mytest-m64.0000/module_tiles.fppized.f90
    build/build_base_mytest-m64.0000/module_timing.fppized.f90
    build/build_base_mytest-m64.0000/module_utility.fppized.f90
    build/build_base_mytest-m64.0000/module_wind_fitch.fppized.f90
    build/build_base_mytest-m64.0000/module_wrf_error.fppized.f90
    build/build_base_mytest-m64.0000/module_wrf_top.fppized.f90
    build/build_base_mytest-m64.0000/mradb2.fppized.f90
    build/build_base_mytest-m64.0000/mradb3.fppized.f90
    build/build_base_mytest-m64.0000/mradb4.fppized.f90
    build/build_base_mytest-m64.0000/mradb5.fppized.f90
    build/build_base_mytest-m64.0000/mradbg.fppized.f90
    build/build_base_mytest-m64.0000/mradf2.fppized.f90
    build/build_base_mytest-m64.0000/mradf3.fppized.f90
    build/build_base_mytest-m64.0000/mradf4.fppized.f90
    build/build_base_mytest-m64.0000/mradf5.fppized.f90
    build/build_base_mytest-m64.0000/mradfg.fppized.f90
    build/build_base_mytest-m64.0000/mrftb1.fppized.f90
    build/build_base_mytest-m64.0000/mrftf1.fppized.f90
    build/build_base_mytest-m64.0000/mrfti1.fppized.f90
    build/build_base_mytest-m64.0000/msntb1.fppized.f90
    build/build_base_mytest-m64.0000/msntf1.fppized.f90
    build/build_base_mytest-m64.0000/nest_init_utils.fppized.f90
    build/build_base_mytest-m64.0000/nl_get_0_routines.fppized.f90
    build/build_base_mytest-m64.0000/nl_get_1_routines.fppized.f90
    build/build_base_mytest-m64.0000/nl_get_2_routines.fppized.f90
    build/build_base_mytest-m64.0000/nl_get_3_routines.fppized.f90
    build/build_base_mytest-m64.0000/nl_get_4_routines.fppized.f90
    build/build_base_mytest-m64.0000/nl_get_5_routines.fppized.f90
    build/build_base_mytest-m64.0000/nl_get_6_routines.fppized.f90
    build/build_base_mytest-m64.0000/nl_get_7_routines.fppized.f90
    build/build_base_mytest-m64.0000/nl_set_0_routines.fppized.f90
    build/build_base_mytest-m64.0000/nl_set_1_routines.fppized.f90
    build/build_base_mytest-m64.0000/nl_set_2_routines.fppized.f90
    build/build_base_mytest-m64.0000/nl_set_6_routines.fppized.f90
    build/build_base_mytest-m64.0000/nl_set_7_routines.fppized.f90
    build/build_base_mytest-m64.0000/output_wrf.fppized.f90
    build/build_base_mytest-m64.0000/r1f2kb.fppized.f90
    build/build_base_mytest-m64.0000/r1f2kf.fppized.f90
    build/build_base_mytest-m64.0000/r1f3kb.fppized.f90
    build/build_base_mytest-m64.0000/r1f3kf.fppized.f90
    build/build_base_mytest-m64.0000/r1f4kb.fppized.f90
    build/build_base_mytest-m64.0000/r1f4kf.fppized.f90
    build/build_base_mytest-m64.0000/r1f5kb.fppized.f90
    build/build_base_mytest-m64.0000/r1f5kf.fppized.f90
    build/build_base_mytest-m64.0000/r1fgkb.fppized.f90
    build/build_base_mytest-m64.0000/r1fgkf.fppized.f90
    build/build_base_mytest-m64.0000/r4_factor.fppized.f90
    build/build_base_mytest-m64.0000/r4_mcfti1.fppized.f90
    build/build_base_mytest-m64.0000/r4_tables.fppized.f90
    build/build_base_mytest-m64.0000/r8_factor.fppized.f90
    build/build_base_mytest-m64.0000/r8_mcfti1.fppized.f90
    build/build_base_mytest-m64.0000/r8_tables.fppized.f90
    build/build_base_mytest-m64.0000/rfft1b.fppized.f90
    build/build_base_mytest-m64.0000/rfft1f.fppized.f90
    build/build_base_mytest-m64.0000/rfft1i.fppized.f90
    build/build_base_mytest-m64.0000/rfftb1.fppized.f90
    build/build_base_mytest-m64.0000/rfftf1.fppized.f90
    build/build_base_mytest-m64.0000/rffti1.fppized.f90
    build/build_base_mytest-m64.0000/rfftmb.fppized.f90
    build/build_base_mytest-m64.0000/rfftmf.fppized.f90
    build/build_base_mytest-m64.0000/rfftmi.fppized.f90
    build/build_base_mytest-m64.0000/set_timekeeping.fppized.f90
    build/build_base_mytest-m64.0000/sint.fppized.f90
    build/build_base_mytest-m64.0000/solve_em.fppized.f90
    build/build_base_mytest-m64.0000/solve_interface.fppized.f90
    build/build_base_mytest-m64.0000/start_domain.fppized.f90
    build/build_base_mytest-m64.0000/start_em.fppized.f90
    build/build_base_mytest-m64.0000/track_driver.fppized.f90
    build/build_base_mytest-m64.0000/track_input.fppized.f90
    build/build_base_mytest-m64.0000/wrf.fppized.f90
    build/build_base_mytest-m64.0000/wrf_bdyin.fppized.f90
    build/build_base_mytest-m64.0000/wrf_bdyout.fppized.f90
    build/build_base_mytest-m64.0000/wrf_debug.fppized.f90
    build/build_base_mytest-m64.0000/wrf_ext_read_field.fppized.f90
    build/build_base_mytest-m64.0000/wrf_ext_write_field.fppized.f90
    build/build_base_mytest-m64.0000/wrf_fddaobs_in.fppized.f90
    build/build_base_mytest-m64.0000/wrf_io.fppized.f90
    build/build_base_mytest-m64.0000/wrf_shutdown.fppized.f90
    build/build_base_mytest-m64.0000/wrf_timeseries.fppized.f90
    build/build_base_mytest-m64.0000/wrf_tsin.fppized.f90
    build/build_base_mytest-m64.0000/xercon.fppized.f90
    build/build_base_mytest-m64.0000/xerfft.fppized.f90
    build/build_base_mytest-m64.0000/z1f2kb.fppized.f90
    build/build_base_mytest-m64.0000/z1f2kf.fppized.f90
    build/build_base_mytest-m64.0000/z1f3kb.fppized.f90
    build/build_base_mytest-m64.0000/z1f3kf.fppized.f90
    build/build_base_mytest-m64.0000/z1f4kb.fppized.f90
    build/build_base_mytest-m64.0000/z1f4kf.fppized.f90
    build/build_base_mytest-m64.0000/z1f5kb.fppized.f90
    build/build_base_mytest-m64.0000/z1f5kf.fppized.f90
    build/build_base_mytest-m64.0000/z1fgkb.fppized.f90
    build/build_base_mytest-m64.0000/z1fgkf.fppized.f90
    build/build_base_mytest-m64.0000/z1fm1b.fppized.f90
    build/build_base_mytest-m64.0000/z1fm1f.fppized.f90
    build/build_base_mytest-m64.0000/zmf2kb.fppized.f90
    build/build_base_mytest-m64.0000/zmf2kf.fppized.f90
    build/build_base_mytest-m64.0000/zmf3kb.fppized.f90
    build/build_base_mytest-m64.0000/zmf3kf.fppized.f90
    build/build_base_mytest-m64.0000/zmf4kb.fppized.f90
    build/build_base_mytest-m64.0000/zmf4kf.fppized.f90
    build/build_base_mytest-m64.0000/zmf5kb.fppized.f90
    build/build_base_mytest-m64.0000/zmf5kf.fppized.f90
    build/build_base_mytest-m64.0000/zmfgkb.fppized.f90
    build/build_base_mytest-m64.0000/zmfgkf.fppized.f90
)

add_library(wrf_r SHARED
    ${SRC_FILE_521}
    ${HMSPEC_ROOT_DIR}/Fortran_main.c
)
target_compile_definitions(wrf_r PRIVATE
    -DSPEC -DNDEBUG -DSTUBMPI -DSPEC_AUTO_SUPPRESS_OPENMP
    -DDM_PARALLEL -DEM_CORE=1 -DNMM_CORE=0 -DNMM_MAX_DIM=2600 -DCOAMPS_CORE=0 -DDA_CORE=0 -DEXP_CORE=0 -DIWORDSIZE=4 -DDWORDSIZE=8 -DRWORDSIZE=4 -DLWORDSIZE=4 -DNETCDF -DINTIO -DCONFIG_BUF_LEN=32768 -DMAX_DOMAINS_F=21 -DNMM_NEST=0 -DMAX_HISTORY=25
    -DSPEC_LP64
    -DSPEC_AUTO_BYTEORDER=0x12345678
    -DSPEC_CASE_FLAG
)

target_compile_options(wrf_r PRIVATE
    -v
    -fconvert=big-endian
)

target_include_directories(wrf_r PRIVATE
    "D:/llvm-project/flang/include"
    "src"
    "src/inc"
    "src/netcdf/include"
)

target_link_libraries(wrf_r PRIVATE
    FortranRuntime
    FortranDecimal
    clang_rt.builtins
)
