message(STATUS "Generating build files for 527.cam4_r...")

set(SRC_FILE_527
    src/array_lib.f90
    src/format_input.f90
    src/math_lib.f90
    src/ESMF_FractionMod.F90
    src/ESMF_Stubs.F90
    src/ESMF_CalendarMod.F90
    src/ESMF_BaseTimeMod.F90
    src/ESMF_Mod.F90
    src/cam_logfile.F90
    src/ESMF_AlarmClockMod.F90
    src/shr_log_mod.F90
    src/ESMF_BaseMod.F90
    src/shr_kind_mod.F90
    src/debugutilitiesmodule.F90
    src/ESMF_TimeIntervalMod.F90
    src/string_utils.F90
    src/namelist_utils.F90
    src/abortutils.F90
    src/ESMF_TimeMod.F90
    src/shr_sys_mod.F90
    src/mpishorthand.F90
    src/units.F90
    src/ESMF_ClockMod.F90
    src/perf_utils.F90
    src/shr_file_mod.F90
    src/ESMF_AlarmMod.F90
    src/fv_control_mod.F90
    src/dycore.F90
    src/pio_kinds.F90
    src/FVperf_module.F90
    src/pmgrid.F90
    src/pft_module.F90
    src/pio_utils.F90
    src/MISR_simulator.F90
    src/ghostmodule.F90
    src/pio_msg_mod.F90
    src/pio_support.F90
    src/pio_types.F90
    src/spmd_utils.F90
    src/Meat.F90
    src/calcdisplace_mod.F90
    src/pionfread_mod.F90
    src/calcdecomp.F90
    src/decompmodule.F90
    src/shr_mpi_mod.F90
    src/alloc_mod.F90
    src/rearrange.F90
    src/pio_mpi_utils.F90
    src/perf_mod.F90
    src/pio.F90
    src/ionf_mod.F90
    src/iompi_mod.F90
    src/pionfwrite_mod.F90
    src/shr_const_mod.F90
    src/shr_timer_mod.F90
    src/ppgrid.F90
    src/commap.F90
    src/infnan.F90
    src/rgrid.F90
    src/pspect.F90
    src/nf_mod.F90
    src/physconst.F90
    src/m_chars.F90
    src/parutilitiesmodule.F90
    src/m_stdio.F90
    src/pionfatt_mod.F90
    src/hycoef.F90
    src/constituents.F90
    src/pio_spmd_utils.F90
    src/m_flow.F90
    src/m_mpif.F90
    src/m_realkinds.F90
    src/shr_cal_mod.F90
    src/m_dropdead.F90
    src/dynamics_vars.F90
    src/spmd_dyn.F90
    src/mod_comm.F90
    src/shr_string_mod.F90
    src/box_rearrange.F90
    src/cam_control_mod.F90
    src/m_mpif90.F90
    src/dyn_grid.F90
    src/m_mpout.F90
    src/m_die.F90
    src/ioFileMod.F90
    src/m_IndexBin_logical.F90
    src/time_manager.F90
    src/m_ioutil.F90
    src/m_SortingTools.F90
    src/cam_history_support.F90
    src/m_IndexBin_char.F90
    src/GPTLget_memusage.c
    src/GPTLprint_memusage.c
    src/GPTLutil.c
    src/netcdf/typeSizes.f90
    src/piolib_mod.F90
    src/m_IndexBin_integer.F90
    src/m_TraceBack.F90
    src/m_rankMerge.F90
    src/m_MergeSorts.F90
    src/m_String.F90
    src/m_GlobalMap.F90
    src/m_FcComms.F90
    src/m_MCTWorld.F90
    src/m_SparseMatrixToMaps.F90
    src/m_Permuter.F90
    src/m_SparseMatrixComms.F90
    src/m_ConvertMaps.F90
    src/m_Navigator.F90
    src/m_ExchangeMaps.F90
    src/m_SparseMatrixDecomp.F90
    src/piodarray.F90
    src/m_GlobalToLocal.F90
    src/m_mall.F90
    src/m_Router.F90
    src/m_GlobalSegMapComms.F90
    src/m_Transfer.F90
    src/m_SparseMatrixPlus.F90
    src/m_MatAttrVectMul.F90
    src/m_Rearranger.F90
    src/solar_data.F90
    src/m_List.F90
    src/m_AttrVectComms.F90
    src/seq_drydep_mod.F90
    src/m_GlobalSegMap.F90
    src/sat_hist.F90
    src/shr_orb_mod.F90
    src/shr_tInterp_mod.F90
    src/m_inpak90.F90
    src/mct_mod.F90
    src/seq_comm_mct.F90
    src/cam_pio_utils.F90
    src/shr_pcdf_mod.F90
    src/m_SparseMatrix.F90
    src/m_GeneralGridComms.F90
    src/seq_io_mod.F90
    src/error_messages.F90
    src/pionfget_mod.F90
    src/m_Accumulator.F90
    src/scamMod.F90
    src/geopotential.F90
    src/ref_pres.F90
    src/time_utils.F90
    src/mo_constants.F90
    src/phys_control.F90
    src/m_types.F90
    src/phys_grid.F90
    src/interp_mod.F90
    src/filenames.F90
    src/shr_scam_mod.F90
    src/advect_tend.F90
    src/phys_gmean.F90
    src/pionfput_mod.F90
    src/m_AttrVect.F90
    src/shr_ncread_mod.F90
    src/shr_strdata_mod.F90
    src/cosp_share.F90
    src/cam_history_buffers.F90
    src/seq_flds_mod.F90
    src/interpolate_data.F90
    src/chem_surfvals.F90
    src/physics_types.F90
    src/quicksort.F90
    src/m_GeneralGrid.F90
    src/ghg_data.F90
    src/radconstants.F90
    src/shr_dmodel_mod.F90
    src/phys_debug_util.F90
    src/mo_util.F90
    src/mo_flbc.F90
    src/phys_buffer.F90
    src/param_cldoptics.F90
    src/pkg_cldoptics.F90
    src/rad_solar_var.F90
    src/repro_sum_mod.F90
    src/conv_water.F90
    src/wrap_nf.F90
    src/cmparray_mod.F90
    src/cosp_constants.F90
    src/shr_stream_mod.F90
    src/camsrfexch_types.F90
    src/cosp_utils.F90
    src/radlw.F90
    src/radiation_data.F90
    src/cosp_lidar.F90
    src/cosp_misr_simulator.F90
    src/llnl_stats.F90
    src/shr_map_mod.F90
    src/aer_rad_props.F90
    src/cosp_stats.F90
    src/cosp_isccp_simulator.F90
    src/radar_simulator.f90
    src/radar_simulator_types.f90
    src/cosp_modis_simulator.F90
    src/lmd_ipsl_stats.F90
    src/cosp_radar.F90
    src/cosp_simulator.F90
    src/radheat.F90
    src/phys_prop.F90
    src/modal_aer_opt.F90
    src/chemistry.F90
    src/modis_simulator.F90
    src/horizontal_interpolate.F90
    src/rad_constituents.F90
    src/wv_saturation.F90
    src/polar_avg.F90
    src/cosp.F90
    src/trb_mtn_stress.F90
    src/prescribed_ghg.F90
    src/phys_debug.F90
    src/prescribed_aero.F90
    src/upper_bc.F90
    src/radsw.F90
    src/shr_mct_mod.F90
    src/cosp_types.F90
    src/radiation.F90
    src/cam3_ozone_data.F90
    src/aoa_tracers.F90
    src/iondrag.F90
    src/molec_diff.F90
    src/tracers.F90
    src/prescribed_volcaero.F90
    src/prescribed_ozone.F90
    src/atmos_lib.f90
    src/aircraft_emit.F90
    src/hb_diff.F90
    src/tracers_suite.F90
    src/modal_aero_deposition.F90
    src/advnce.F90
    src/diffusion_solver.F90
    src/aerodep_flx.F90
    src/boundarydata.F90
    src/cam3_aero_data.F90
    src/vertical_diffusion.F90
    src/drydep_mod.F90
    src/scyc.F90
    src/xpavg_mod.F90
    src/history_scam.F90
    src/tracer_data.F90
    src/dust_sediment_mod.F90
    src/buffer.F90
    src/comsrf.F90
    src/error_function.F90
    src/cospsimulator_intr.F90
    src/tropopause.F90
    src/co2_cycle.F90
    src/co2_data_flux.F90
    src/diag_module.F90
    src/aerosol_intr.F90
    src/dyn_internal_state.F90
    src/wetdep.F90
    src/readinitial.F90
    src/history_defaults.F90
    src/restart_dynamics.F90
    src/ncdio_atm.F90
    src/pfixer.F90
    src/progseasalts_intr.F90
    src/ctem.F90
    src/radae.F90
    src/restart_physics.F90
    src/cam_restart.F90
    src/dust_intr.F90
    src/startup_initialconds.F90
    src/inital.F90
    src/cloud_fraction.F90
    src/uw_conv.F90
    src/ndrop.F90
    src/cam_history.F90
    src/convect_shallow.F90
    src/metdata.F90
    src/pkg_cld_sediment.F90
    src/inidat.F90
    src/fv_prints.F90
    src/ionosphere.F90
    src/cloud_rad_props.F90
    src/hk_conv.F90
    src/cloud_diagnostics.F90
    src/stepon.F90
    src/tidal_diag.F90
    src/constituent_burden.F90
    src/dp_coupling.F90
    src/check_energy.F90
    src/flux_avg.F90
    src/cldwat.F90
    src/microp_aero.F90
    src/majorsp_diffusion.F90
    src/convect_deep.F90
    src/sslt_rebin.F90
    src/rayleigh_friction.F90
    src/dyn_comp.F90
    src/microp_driver.F90
    src/seq_cdata_mod.F90
    src/cam_cpl_indices.F90
    src/stratiform.F90
    src/zm_conv_intr.F90
    src/cam_comp.F90
    src/eddy_diff.F90
    src/macrop_driver.F90
    src/binary_io.F90
    src/bnddyi.F90
    src/physpkg.F90
    src/map_ocnocn_mct.F90
    src/benergy.F90
    src/gw_drag.F90
    src/mrg_x2s_mct.F90
    src/cam_diagnostics.F90
    src/runtime_opts.F90
    src/ice_comp_mct.F90
    src/mrg_x2o_mct.F90
    src/seq_avdata_mod.F90
    src/mrg_x2a_mct.F90
    src/map_iceocn_mct.F90
    src/seq_map_mod.F90
    src/map_snoglc_mct.F90
    src/map_atmice_mct.F90
    src/map_atmlnd_mct.F90
    src/atm_comp_mct.F90
    src/seq_rearr_mod.F90
    src/mrg_x2l_mct.F90
    src/seq_infodata_mod.F90
    src/seq_rest_mod.F90
    src/map_lndlnd_mct.F90
    src/seq_diag_mct.F90
    src/map_iceice_mct.F90
    src/lnd_comp_mct.F90
    src/ocn_types.F90
    src/map_glcglc_mct.F90
    src/seq_frac_mct.F90
    src/map_rofrof_mct.F90
    src/map_atmatm_mct.F90
    src/shr_mem_mod.F90
    src/seq_hist_mod.F90
    src/ocn_comp_mct.F90
    src/ocn_comp.F90
    src/seq_flds_indices.F90
    src/cldwat2m_macro.F90
    src/map_rofocn_mct.F90
    src/shr_flux_mod.F90
    src/mrg_x2g_mct.F90
    src/map_snosno_mct.F90
    src/zm_conv.F90
    src/mrg_x2i_mct.F90
    src/seq_timemgr_mod.F90
    src/seq_domain_mct.F90
    src/glc_comp_mct.F90
    src/ccsm_driver.F90
    src/seq_flux_mct.F90
    src/map_atmocn_mct.F90
    src/cldsav.F90
    src/cpslec.F90
    src/comspe.F90
    src/datetime.F90
    src/cldwat2m_micro.F90
    src/d2a3dijk.F90
    src/d2a3dikj.F90
    src/dadadj.F90
    src/diag_dynvar_ic.F90
    src/mean_module.F90
    src/dryairm.F90
    src/esinti.F90
    src/fort.F90
    src/epvd.F90
    src/gauaw_mod.F90
    src/fill_module.F90
    src/gffgch.F90
    src/hirsbtpar.f90
    src/initcom.F90
    src/iop_surf.F90
    src/geopk.F90
    src/intp_util.F90
    src/initindx.F90
    src/sw_core.F90
    src/cd_core.F90
    src/uwshcu.F90
    src/mapz_module.F90
    src/get_zeits.c
    src/fft99.F90
    src/m_Filename.F90
    src/optics_lib.f90
    src/gptl_papi.c
    src/icarus.F90
    src/lidar_simulator.F90
    src/m_StrTemplate.F90
    src/m_FileResolv.F90
    src/ccsm_comp_mod.F90
    src/tp_core.F90
    src/marsaglia.F90
    src/m_AttrVectReduce.F90
    src/m_AccumulatorComms.F90
    src/f_wrappers.c
    src/pio_quicksort.F90
    src/mo_solar_parms.F90
    src/mct_rearrange.F90
    src/par_vecsum.F90
    src/m_zeit.F90
    src/mo_msis_ubc.F90
    src/pf_to_mr.F90
    src/m_SpatialIntegralV.F90
    src/p_d_adjust.F90
    src/par_xsum.F90
    src/pio_msg_callbacks.F90
    src/pio_nf_utils.F90
    src/gases.f90
    src/mo_regrider.F90
    src/pkez.F90
    src/prec_scops.F90
    src/puminterfaces.F90
    src/qneg3.F90
    src/qneg4.F90
    src/m_SpatialIntegral.F90
    src/redistributemodule.F90
    src/m_Merge.F90
    src/comm.c
    src/handles.c
    src/pio_msg_getput_callbacks.F90
    src/miesubs.F90
    src/load_hydrometeor_classes.f90
    src/srchutil.F90
    src/shr_msg_mod.F90
    src/scops.F90
    src/srfxfer.F90
    src/shr_vmath_mod.F90
    src/tphysac.F90
    src/topology.c
    src/tsinti.F90
    src/tphysbc.F90
    src/pack.c
    src/trac2d.F90
    src/shr_vmath_fwrap.c
    src/uv3s_update.F90
    src/virtem.F90
    src/tphysidl.F90
    src/shr_jlcp.c
    src/trunc.F90
    src/vrtmap.F90
    src/wrf_error_fatal.F90
    src/group.c
    src/te_map.F90
    src/threadutil.c
    src/wrf_message.F90
    src/time.c
    src/zenith.F90
    src/zeff.f90
    src/dsd.f90
    src/msise00.F90
    src/sulchem.F90
    src/wrap_mpi.F90
    src/mcshallow.F90
    src/recv.c
    src/collective.c
    src/list.c
    src/mpi.c
    src/req.c
    src/netcdf/error.c
    src/netcdf/fort-misc.c
    src/netcdf/libvers.c
    src/netcdf/fort-geninq.c
    src/netcdf/fort-lib.c
    src/netcdf/fort-vario.c
    src/netcdf/string.c
    src/netcdf/fort-dim.c
    src/netcdf/fort-varaio.c
    src/netcdf/fort-var1io.c
    src/mrgrnk.f90
    src/send.c
    src/netcdf/fort-genvar.c
    src/sgexx.F90
    src/netcdf/fort-varmio.c
    src/netcdf/fort-genatt.c
    src/netcdf/dim.c
    src/netcdf/fort-varsio.c
    src/netcdf/fort-control.c
    src/gptl.c
    src/netcdf/fort-attio.c
    src/netcdf/v2i.c
    src/spec_qsort/spec_qsort.c
    src/netcdf/var.c
    src/netcdf/posixio.c
    src/netcdf/nc.c
    src/netcdf/v1hpg.c
    src/netcdf/fort-v2compat.c
    src/netcdf/attr.c
    src/netcdf/ncx.c
    src/netcdf/putget.c
    src/netcdf/netcdf.f90
)

add_library(cam4_r SHARED
    ${SRC_FILE_527}
    ${HMSPEC_ROOT_DIR}/Fortran_main.c
)
target_compile_definitions(cam4_r PRIVATE
    -DSPEC -DNDEBUG -DSPEC_AUTO_SUPPRESS_OPENMP -DSPEC_LP64 -DSPEC_AUTO_BYTEORDER=0x12345678
    -DNO_SHR_VMATH -DCO2A -DPERGRO -DPLON=144 -DPLAT=96 -DPLEV=26 -DPCNST=3 -DPCOLS=4 -DPTRM=1 -DPTRN=1 -DPTRK=1 -DSTAGGERED -D_NETCDF -DNO_R16
    -DHIDE_MPI -D_MPISERIAL -DNO_MPI2 -DSPEC_CASE_FLAG
)


target_include_directories(cam4_r PRIVATE
    "D:/llvm-project/flang/include"
    "src"
    "src/include"
    "src/netcdf/include"
)

target_link_libraries(cam4_r PRIVATE
    FortranRuntime
    FortranDecimal
    clang_rt.builtins
)
